# codeql-experimentation

./: .gitignore  .gitmodules  README.md  codeql-workspace.yml  env.sh  eval-config.toml
cpp/: README.md  qlpack.yml
cpp/array/: main.cpp
cpp/async/: main.cpp
cpp/atomic/: CMakeLists.txt  externals.hpp  main.cpp
cpp/basic_string/: main.cpp
cpp/basic_string_constructor/: main.cpp
cpp/basic_string_write/: main.cpp
cpp/conditional-exec/: main.cpp
cpp/context/: main.cpp
cpp/control-flow-nesting-issue/: main.cpp
cpp/duration-experimentation/: main.cpp
cpp/dynamic-dispatch/: CMakeLists.txt  main.cpp
cpp/external-library/: CMakeLists.txt  README.md
cpp/external-library/some_library/: CMakeLists.txt  lib.cpp  lib.hpp
cpp/external-library/src/: CMakeLists.txt  main.cpp
cpp/freedit/: CMakeLists.txt  freedit-store.qlref  main.cpp
cpp/freedit/flib/: CMakeLists.txt  flib.cpp  flib.hpp
cpp/function-pointer/: function-pointer.qlref  main.cpp
cpp/function-pointer-2/: main.cpp
cpp/function-pointer-2-templatized/: main.cpp
cpp/hof/: main.cpp
cpp/hof/query/: simple-source-sink.ql
cpp/interprocedular-control-flow-analysis/: CMakeLists.txt
cpp/interprocedural-control-flow-analysis/: main.cpp
cpp/lemmy/: CMakeLists.txt  lemmy-instance.qlref  main.cpp
cpp/manual-vector/: CMakeLists.txt  main.cpp
cpp/mcaptcha/: CMakeLists.txt  main.cpp
cpp/plume/: CMakeLists.txt  main.cpp  plume-deletion.qlref
cpp/plume/plib/: CmakeLists.txt  lib.cpp  lib.hpp
cpp/pointer-assignment/: main.cpp
cpp/pointer-smuggling/: main.cpp
cpp/query/: FlowConfigs.qll  async.ql  basic-string-constructor.ql  conditional.ql  control-flow-nesting-issue.ql  duration-experimentation.ql  just-show-target-call.ql  lemmy-instance.ql  print-all-flows-taint.ql  print-all-flows.ql  qlpack.yml  scoped-storage-investigation.ql  simple-source-sink-taint.ql  simple-source-sink.ql  source-sink-call-taint-no-imports.ql  thread.ql  vector-propagate-taint.ql  vector.ql
cpp/scoped-storage-investigation/: CMakeLists.txt  main.cpp
cpp/simple-flow/: main.cpp
cpp/simple-flow/query/: codeql-pack.lock.yml  print-all-flows.ql  testquery.ql
cpp/thread/: CMakeLists.txt  main.cpp
cpp/to_string/: main.cpp
cpp/uninstantiated-template/: CMakeLists.txt  main.h
cpp/unordered_map/: CMakeLists.txt  main.cpp
cpp/vector/: main.cpp
cpp/vector-taint-detection/: main.cpp
cpp/vector/idx-write-for-read/: main.cpp
cpp/vector/idx-write-idx-read/: main.cpp
cpp/vector/push_back-write-at-read/: main.cpp
cpp/vector/push_back-write-idx-read/: main.cpp
expected/: atomic.txt  lemmy-instance.txt  plume-data-deletion.txt
expected/freedit/: expire.txt  store.txt
expected/mcaptcha/: deletion.txt  limited-collection.txt
expected/websubmit/: deletion.txt  disclosure.txt  scoped-storage.txt
paralegal/policy/: Cargo.toml  simple-source-sink.txt
paralegal/policy/src/: main.rs
policy-coding/: CodeQL policy coding - Justus.csv  CodeQL policy coding - Will.csv
query/: print-all-flows-taint.ql  qlpack.yml  thread.ql
real-world-policies/: atomic.ql  freedit-store.ql  lemmy-instance.ql  mcaptcha-limited-collection.ql  plume-data-deletion.ql  qlpack.yml  websubmit-deletion.ql
real-world-policies/freedit/: Common.qll  expire.ql  store.ql
real-world-policies/mcaptcha/: deletion.ql
real-world-policies/websubmit/: Basics.qll  deletion.ql  disclosure.ql  scoped-storage.ql
runner/: Cargo.toml
runner/src/: main.rs
