[package]
name = "runner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
chrono = "0.4.40"
clap = { version = "4.5.37", features = ["derive"] }
indicatif = "0.17.11"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.22"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
